# tyni-scribe

./: .env.example  .gitignore  .gitmodules  LICENSE  Tts.sln  build-steps.md  build.md  plan.md  stack.md
.github/: copilot-instructions.md
docs/: build.md  implementation-steps.md  plan.md  stack.md
scripts/: Invoke-YtChannelBatchPipeline.ps1  Watch-YtChannelProgress.ps1
scripts/benchmarks/: Compare-ShortsMethods.ps1  Prepare-LibriSpeechTestClean.ps1  Run-TranscriptionBenchmark.ps1  provider-matrix.example.json
src/TranscriptSummary.Cli/: CommandLineHelp.cs  Program.cs  TranscriptSummary.Cli.csproj
src/TranscriptSummary.Cli/Summarize/: SummarizeCommand.cs  SummarizeMetrics.cs  SummarizeOptions.cs
src/TranscriptSummary.Core/: TranscriptSummary.Core.csproj  TranscriptSummaryServiceCollectionExtensions.cs
src/TranscriptSummary.Core/Services/: IOpenAiSummaryClient.cs  ITranscriptArtifactReader.cs  (+6 more)
src/Tts.App/: App.xaml  App.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs  Tts.App.csproj
src/Tts.Cli/: .gitignore  CommandLineHelp.cs  Program.cs  Tts.Cli.csproj
src/Tts.Core/: Tts.Core.csproj
src/YtChannel.Cli/: ChannelInputParser.cs  CommandLineHelp.cs  DotEnvLoader.cs  Program.cs  YtChannel.Cli.csproj
src/YtChannel.Core/: YtChannel.Core.csproj
src/YtScribe.Cli/: CommandLineHelp.cs  Program.cs  YtScribe.Cli.csproj
src/YtScribe.Core/: YtScribe.Core.csproj
src/native/Tts.CTranslate2Interop/: CMakeLists.txt  README.md
src/native/Tts.CTranslate2Interop/include/: tts_ctranslate2_interop.h
src/native/Tts.CTranslate2Interop/src/: tts_ctranslate2_interop.cpp
src/native/Tts.WhisperInterop/: .gitignore  CMakeLists.txt  README.md
src/native/Tts.WhisperInterop/include/: tts_whisper_interop.h
src/native/Tts.WhisperInterop/src/: tts_whisper_interop.cpp
tmp/yt-transcripts/: metrics-caption.json
tmp/yt-transcripts-audio/: metrics-audio.json
(+207 files in other folders)
